--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -74,6 +74,13 @@
             <artifactId>reactor-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>6.2.3</version> <!-- ou la dernière version stable -->
+        </dependency>
+
     </dependencies>
 
     <build>
