--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=demo
+
+# Configuration R2DBC pour PostgreSQL
+spring.r2dbc.url=r2dbc:postgresql://localhost:5432/demo_db
+spring.r2dbc.username=demo_user
+spring.r2dbc.password=demo_password
+
+# Initialisation automatique de la base de données
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
+
+# Désactiver le pooling R2DBC pour éviter les erreurs d'incompatibilité
+spring.r2dbc.pool.enabled=false
+
+# Configuration du logging pour le débogage des erreurs
+logging.level.io.r2dbc=DEBUG
+logging.level.org.springframework.r2dbc=DEBUG
+logging.level.org.springframework.transaction=DEBUG
