ajout de sécurité et config

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.r2dbc.pool.enabled=false
 logging.level.io.r2dbc=DEBUG
 logging.level.org.springframework.r2dbc=DEBUG
 logging.level.org.springframework.transaction=DEBUG
+
+# Configuration JWT
+jwt.secret=UmV2ZWxhdGlvbkVzdExlTWVpbGxldXVBbmltZUFMYU9ryW1l
+jwt.expiration=86400000
